--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -360,12 +360,15 @@ form button:hover,
 .file-upload.field .file-preview > .file {
 	display: inline-block;
 	width: 100px;
-	margin: 0 5px;
+	margin: 5px;
 	text-align: center;
 	background-color: #e1dcce;
 	padding-top: 10px;
 	cursor: pointer;
 	border: 3px solid transparent;
+	
+	position: relative;
+	padding-bottom: 1em;
 }
 .file-upload.field .file-preview > .file:hover {
 	border-color: #83A2C9;
@@ -377,13 +380,26 @@ form button:hover,
 	background-repeat: no-repeat;
 	background-position: center center;
 	display: inline-block;
+	text-align: center;
+	margin-bottom: 10px;
 }
 .file-upload.field .file-preview > .file .description {
 	text-transform: uppercase;
 	font-size: 9px;
 	display: block;
 	background-color: #f3f0ea;
-	padding: 5px;
+	height: 2em;
+	overflow: hidden;
+	line-height: 2em;
+	padding: 0 5px;
+	
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+.file-upload.field .file-preview > .file .description:hover {
+	color: #83A2C9;
 }
 .file-upload.field .file-preview > .word.file .icon {
 	background-image: url(images/icons/icon-word.png);
@@ -392,7 +408,87 @@ form button:hover,
 	background-image: url(images/icons/icon-pdf.png);
 }
 .file-upload.field .file-preview > .img.file .icon {
-	
+	background-image: none;
+	position: relative;
+}
+.file-upload.field .file-preview > .img.file .icon img {
+	max-width: 64px;
+	max-height: 64px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+}
+#image-preview {
+	text-align: center;
+	background-color: #e1dcce;
+	position: relative;
+	display: none;
+}
+#image-preview img {
+	max-width: 100%;
+	max-height: 450px;
+}
+#image-preview .image {
+	display: inline-block;
+	position: relative;
+}
+#image-preview .description {
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #f3f0ea;
+}
+#image-preview a.description {
+	cursor: pointer;
+	padding: 5px 10px;
+	font-size: 11px;
+	text-transform: uppercase;
+}
+#image-preview div.description {
+	text-align: left;
+	padding: 10px;
+}
+#image-preview div.description textarea {
+	margin: 0;
+	border: 0;
+	width: 100%;
+	display: block;
+	background-color: #f3f0ea;
+	padding: 0;
+	font-size: 11px;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+#image-preview div.description textarea:focus {
+	outline: 0;
+}
+#image-preview .button {
+	padding: 0 10px;
+	font-size: 11px;
+}
+#image-preview .button:hover {
+	color: #fff;
+}
+#image-preview div.description .button {
+	display: inline-block;
+	margin-right: 10px;
+}
+#image-preview #image-preview-next,
+#image-preview #image-preview-prev,
+#image-preview #image-preview-close {
+	position: absolute;
+	top: 10px;
+}
+#image-preview #image-preview-next,
+#image-preview #image-preview-prev {
+	right: 10px;
+}
+#image-preview #image-preview-close {
+	left: 10px;
+}
+div.fancybox-skin {
+	background-color: #e1dcce;
 }
 .field .ui-radios {
 	margin-bottom: 10px;
