--- a/content-backend/assets/css/application.css
+++ b/content-backend/assets/css/application.css
@@ -85,7 +85,7 @@ input[type="submit"],
 input[type="button"],
 button,
 .button {
-	font-size: 11px;
+	font-size: 11px !important;
 }
 
 .field,
@@ -104,7 +104,8 @@ button,
 
 .field.c1 input[type="text"],
 .field.c1 input[type="password"],
-.field.c1 select {
+.field.c1 select,
+.field.c1 textarea {
 	width: 895px;
 }
 
@@ -173,11 +174,27 @@ button,
 	background-color: #f3b3b3;
 }
 
+.readonly.field {
+	line-height: 22px;
+	font-size: 16px;
+}
+
+.horizontal.field label {
+	display: inline-block;
+	margin-right: 10px;
+}
+
 /*
 |--------------------------------------------------------------------------
 | Table Styles
 |--------------------------------------------------------------------------
 */
+
+#create-container {
+	text-align: right;
+	margin-bottom: 10px;
+	margin-right: 10px;	
+}
 
 #assignments.admin {
 	
@@ -199,11 +216,12 @@ button,
 	font-weight: normal;
 }
 
-#assignments.admin .button {
+.button {
 	padding: 5px 10px;
 }
 
-#assignments.admin .button:hover {
+.button:hover,
+.button:visited {
 	color: #fff;
 }
 
@@ -247,3 +265,119 @@ button,
 #account-index .field input[type="text"] {
 	width: 250px;
 }*/
+
+/*
+|--------------------------------------------------------------------------
+| Assignments :: View
+|--------------------------------------------------------------------------
+*/
+
+/* Assignment Options
+-------------------------------------------------------------------------*/
+
+#assignment-options {
+	float: right;
+	width: 200px;
+	background-color: #ccc;
+	padding: 15px;
+}
+
+#assignment-options h3 {
+	color: #000;
+	font-size: 12px;
+}
+
+#assignment-options input[type="radio"] {
+	margin-right: 10px;
+}
+
+/* Tabs
+-------------------------------------------------------------------------*/
+
+#tabs {
+	margin-right: 245px;
+}
+
+#tabs .ui-tabs-nav {
+	height: 36px;
+	background-color: #0a2c79;
+	border: 1px solid transparent;
+}
+
+#tabs .ui-tabs-nav li,
+#tabs .ui-tabs-nav .ui-state-default {
+	border: 1px solid transparent;
+	background-color: #fff;
+}
+
+#tabs .ui-tabs-nav li.ui-state-active,
+#tabs .ui-tabs-nav li:hover {
+	background-color: #ccc;
+	border: 1px solid transparent;
+}
+
+#tabs .ui-tabs-nav li a {
+	color: #000;
+}
+
+#tabs .ui-tabs-nav li.ui-state-active a {
+	color: #0a2c79;
+}
+
+/* Correspondence Message
+-------------------------------------------------------------------------*/
+
+.correspondence:before,
+.correspondence:after {
+    content: " ";
+    display: table; 
+}
+
+.correspondence:after {
+    clear: both;
+}
+
+.correspondence {
+    *zoom: 1;
+	margin-bottom: 15px;
+	padding: 0 15px 15px;
+	border-bottom: 1px solid #ccc;
+}
+
+.correspondence > .user-details {
+	float: left;
+	width: 150px;
+	background-color: #12223a;
+	padding: 5px;
+	color: #fff;
+	font-size: 12px;
+	border-radius: 5px;
+}
+
+.correspondence > .user-details > .from {
+	text-transform: uppercase;
+	margin-bottom: 5px;
+	font-size: 11px;
+	color: #83A2C9;
+}
+
+.correspondence > .user-details > .name {
+	font-weight: bold;
+	font-size: 16px;
+}
+.correspondence > .user-details > .role {
+	font-style: italic;
+}
+
+.correspondence > .message {
+	padding-left: 170px;
+}
+
+.assignment-owner.correspondence > .user-details {
+	background-color: #ccc;
+	color: #000;
+}
+
+.assignment-owner.correspondence > .user-details > .from {
+	color: #12223a;
+}
