--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -146,9 +146,10 @@ a:hover {
 }
 #logo h1 {
 	display: inline-block;
-	width: 300px;
-	height: 73px;
-	background: url(images/logo.png) center center no-repeat;
+	width: 315px;
+	height: 131px;
+	margin-top: 0;
+	background: url(images/arlogo.png) center center no-repeat;
 	text-indent: -999px;
 }
 #nav {
