--- a/content-backend/assets/css/report.css
+++ b/content-backend/assets/css/report.css
@@ -5,24 +5,28 @@ body {
 }
 
 fieldset {
-	
+	border-top: 2px solid #000;
 }
 
 fieldset legend {
-	
+	background-color: #000;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 16px;
+	padding: 5px;
 }
 
 label {
 	font-weight: bold;
+	width: 170px;
+	text-align: right;
+	display: inline-block;
+	margin-right: 10px;
 }
 
 label:after {
 	content: ':';
-}
-
-.spacer {
-	display: inline-block;
-	margin-right: 15px;
 }
 
 /* Psuedo-grid System (4 columns)
