--- a/content-backend/assets/css/application.css
+++ b/content-backend/assets/css/application.css
@@ -291,6 +291,12 @@ button,
 	margin-right: 10px;
 }
 
+#assignment-options .button {
+	margin-bottom: 5px;
+	display: inline-block;
+	padding: 2px 10px;
+}
+
 /* Tabs
 -------------------------------------------------------------------------*/
 
