--- a/content-backend/assets/css/application.css
+++ b/content-backend/assets/css/application.css
@@ -65,6 +65,10 @@ h6 {
 	font-size: 12px;
 }
 
+#nav a.selected {
+	border-bottom-color: #0a2c79;
+}
+
 /*
 |--------------------------------------------------------------------------
 | Form Styles
