IE8 Style Fixes

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1546,9 +1546,9 @@ color: #003c5d;
 }
 #home #home-top {
   background-color: #F7F7F7;
-  background-image: url(images/page-blue-background-tiremarks.jpg), url(images/home-blue-background.jpg);
+  background-image: url(images/home-blue-background.jpg);
   background-position: 0 0;
-  background-repeat: no-repeat, repeat-x;
+  background-repeat: repeat-x;
   color: #DAE2E9;
   height: 522px;
   margin-left: auto;
@@ -1649,6 +1649,9 @@ padding: 0;
   padding-top: 0;
   width: 636px;
   position: relative;
+  background-image: url(images/page-blue-background-tiremarks.jpg);
+  background-position: 0 0;
+  background-repeat: no-repeat;
 }
 #home-top #home-top-copy p {
     margin:0px;
