--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1506,6 +1506,7 @@ margin-bottom: 8px;
 input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 .agent-login-form input{
     height: 23px !important;
+    padding:0px;
 }
 .agent-login-form {
     height: 23px;
