--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1507,7 +1507,7 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 .agent-login-form input{
     height: 23px !important;
     padding: 0px !important;
-    position:absolute;
+    position: absolute !important;
 }
 .agent-login-form input:nth-child(1){
 	top:0px;
@@ -1519,10 +1519,11 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 }
 .agent-login-form input:nth-child(3){
 	top:0px;
-	left:140px;
+	left:240px;
 }
 .agent-login-form {
     height: 23px;
+    position: relative !important;
 }
 #header #header-login  form.accident-form label{
 display: none;
