--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1504,6 +1504,13 @@ margin-bottom: 8px;
 
 }
 input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
+
+.agent-login-form {
+    height: 23px;
+    position: relative !important;
+    width:400px;
+    border:1px dotted blue;
+}
 .agent-login-form input{
     height: 23px !important;
     padding: 0px !important;
@@ -1521,10 +1528,7 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 	top:0px;
 	left:240px;
 }
-.agent-login-form {
-    height: 23px;
-    position: relative !important;
-}
+
 #header #header-login  form.accident-form label{
 display: none;
 }
