--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1519,17 +1519,17 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 .agent-login-form input:nth-child(1){
 	top:0px;
 	left:0px;
-	width:160px;
+	width:160px !important;
 }
 .agent-login-form input:nth-child(2){
 	top:0px;
 	left:170px;
-	width:160px;
+	width:160px !important;
 }
 .agent-login-form input:nth-child(4){
 	top:0px;
 	left:340px;
-	width:71px;
+	width:71px !important;
 }
 
 #header #header-login  form.accident-form label{
