--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1509,7 +1509,6 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
     height: 23px;
     position: relative !important;
     width:411px;
-    border:1px dotted blue;
 }
 .agent-login-form input{
     height: 23px !important;
@@ -1519,12 +1518,16 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
 .agent-login-form input:nth-child(1){
 	top:0px;
 	left:0px;
+    height: 21px !important;
 	width:160px !important;
+	padding: 0px 8px !important;
 }
 .agent-login-form input:nth-child(2){
 	top:0px;
 	left:170px;
+    height: 21px !important;
 	width:160px !important;
+	padding: 0px 8px !important;
 }
 .agent-login-form input:nth-child(4){
 	top:0px;
