--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1521,6 +1521,7 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
     height: 21px !important;
 	width:144px !important;
 	padding: 0px 8px !important;
+	line-height:21px !important;
 }
 .agent-login-form input:nth-child(2){
 	top:0px;
@@ -1528,6 +1529,7 @@ input[type="submit"]::-moz-focus-inner {border:0;padding-top: 3px;}
     height: 21px !important;
 	width:144px !important;
 	padding: 0px 8px !important;
+	line-height:21px !important;
 }
 .agent-login-form input:nth-child(4){
 	top:0px;
