--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -2330,8 +2330,10 @@ padding-bottom: 8px;
 .file-upload.field > input[type="button"] {
 	font-size: 11px;
 }
-.file-upload.field input[type="file"] {
+#fileupload {
      zoom: 1;
+     margin: 10px auto 0;
+     height: 20px;
      /*
      filter: alpha(opacity=0);
      opacity: 0;
