--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -2334,6 +2334,7 @@ padding-bottom: 8px;
      zoom: 1;
      margin: 10px auto 0;
      height: 20px;
+     padding:8px;
      /*
      filter: alpha(opacity=0);
      opacity: 0;
