ie8 and lower warning on dashboard

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1,3 +1,6 @@
+#browser-warning{
+	background-color:#9ff;
+}
 /*
 Theme Name: Accident Review Protected Theme
 Theme URI: http://www.lifthousedesign.com
