ie8 and lower warning on dashboard

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1,5 +1,6 @@
 #browser-warning{
-	background-color:#9ff;
+	background-color:#ff9;
+	padding:20px;
 }
 /*
 Theme Name: Accident Review Protected Theme
