ie8 and lower warning on dashboard

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -1,6 +1,7 @@
 #browser-warning{
-	background-color:#ff9;
+	background-color:#ff6;
 	padding:20px;
+	border:1px solid yellow;
 }
 /*
 Theme Name: Accident Review Protected Theme
