--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -3,6 +3,9 @@
 	padding:10px 20px;
 	border:1px solid yellow;
 }
+#browser-warning h2{
+	text-align:center;
+}
 #browser-warning h3{
 	text-align:center;
 	border: 1px dotted blue;
