ie8 and lower warning on dashboard

--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -10,6 +10,7 @@
 	text-align:center;
 	border: 1px dotted blue;
 	background-color:#ff6;
+	padding-top:4px;
 }
 /*
 Theme Name: Accident Review Protected Theme
