--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -302,6 +302,7 @@ form select,
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
+	font-size:12px;
 }
 .field input[type="text"]:focus,
 .field input[type="password"]:focus,
