--- a/content-frontend/wp-content/themes/accident-review/style.css
+++ b/content-frontend/wp-content/themes/accident-review/style.css
@@ -290,11 +290,7 @@ form input[type="text"],
 form input[type="password"],
 form textarea,
 form select,
-#assignments_filter input,
-form input[type="button"],
-form input[type="submit"],
-form input[type="file"],
-button {
+#assignments_filter input{
 	/* Same as: #top-panel input */
 	padding: 4px 8px;
 	margin: 0;
@@ -307,6 +303,17 @@ button {
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	font-size:12px;
+}
+form input[type="button"],
+form input[type="submit"],
+form input[type="file"],
+button {
+	padding: 4px 8px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	font-size:12px;
+	
 }
 .field input[type="text"]:focus,
 .field input[type="password"]:focus,
